fix: Delete unnecessary overflows

--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -7,6 +7,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo",
     "Noto Sans KR", sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* 전역 링크 스타일 */
